--- a/app/views/users/password.html
+++ b/app/views/users/password.html
@@ -3,33 +3,51 @@
 <head>
 	<title>Habit Breaker | User Password Change page</title>
 	<meta charset ="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--   BOOTSTRAP -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--   END BOOTSTRAP -->
 	<meta name="description" content="Habit breaker will help to break your habits">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
 	<script type="text/javascript" src="/static/js/jquery.min.v3.1.0.js"></script>
 	<script type="text/javascript" src="/static/js/script.js"></script>
-	
+
 </head>
 <body>
-	<div id="wrapper">
-		<header>
-			<a href='/'><h1>Habit Breaker</h1></a>
-			
-			<a href="#">About</a>
-			{% if not 'id' in session %}
-				<a href="/signin">Sign In</a>
-				<a href="/signup">Sign Up</a>
-			{%else%}
-				<a href="/users/{{session['id']}}">My page</a>
-				<a href="/users/account/{{session['id']}}">Account info</a>
-				<a href="/logout">Log Out</a>
-			{% endif %}
-		</header>
-		<div class="box">
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href='/'>Habit Breaker</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">About</a></li>
+					{% if not 'id' in session %}
+						<li><a href="/signin">Sign In</a></li>
+						<li><a href="/signup">Sign Up</a></li>
+					{%else%}
+						<li><a href="/users/{{session['id']}}">Habits</a></li>
+						<li><a href="/users/account/{{session['id']}}">Account</a></li>
+						<li><a href="/logout">Log Out</a></li>
+					{% endif %}
+		  	</ul>
+		  </div>
+		</div>
+	</nav>
+	<div class="container">
 			<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
 			<hr><br>
-			<h3>Update your password:</h3>
+			<h3>Update Password:</h3>
 			{% with messages = get_flashed_messages(with_categories=true) %}
 				{% if messages %}
 					{% for category, message in messages %}
@@ -37,25 +55,30 @@
 					{% endfor %}
 				{% endif %}
 			{% endwith %}
-			<form action="/users/password_change" method="POST">
-				<label for="password">
-					Password: <input type="password" id="password" name="password" placeholder="Password">
-				</label>
-				<label for="conf_password">
-					Confirmation: <input type="password" id="conf_password" name="conf_password" placeholder="Confirm Password">
-				</label>
-				<input type="hidden" name="id" value="{{ session['id'] }}">
-				<input type="submit" value="Update">
-			</form>
-			<hr>
-			<a href="/users/account/{{session['id']}}">Cancel</a>
-			<a href="/users/edit/{{session['id']}}">Edit account info</a>
-			<a href="/users/delete_user/{{session['id']}}">Delete Account</a>
-			<hr>
-		</div>
-		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
-		</footer>
+			<form class="form-horizontal" action="/users/password_change" method="POST">
+				<div class="form-group">
+					<label class="control-label col-sm-2" for='password'>Password:</label>
+		  		<div class="col-sm-3">
+		    		<input type="text" class="form-control" name="password" id="password" placeholder="Password" value="">
+	  			</div>
+				</div>
+				<div class="form-group">
+					<label class="control-label col-sm-2" for='conf_password'>Confirmation:</label>
+		  		<div class="col-sm-3">
+		    		<input type="text" class="form-control" name="conf_password" id="conf_password" placeholder="Confirm Password" value="">
+		  		</div>
+				</div>
+				<div class="form-group">
+		  		<label class="col-md-4 control-label"></label>
+	  				<div class="col-md-8">
+			  			<input class="form-control" type="hidden" name="id" value="{{ session['id'] }}">
+			  			<input class="btn btn-default" type="submit" value="Update">
+			  		</div>
+				</div>
+		</form>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-footer">&copy; HabitBreakerTeam <a href="#">Help</a> <a href="#">Contact</a></div>
 	</div>
 </body>
 </html>
