--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,108 +1,69 @@
-* {
-	margin: 0px;
-	padding: 0px;
-	font-family: monaco;
+body {
+	background: #3E4649;
+	color: #f7f7f7;
+	font-family: 'Montserrat', sans-serif;
 }
-body{
-	background-color: #7f7f81;
+h1,
+h2 {
+	font-weight: bold;
 }
-p{
-	line-height: 2em;
-	padding: 10px;
-	text-align: justify;
+p {
+	font-size: 16px;
+	color: #cdcdcd;
 }
-#wrapper{
-	width: 100%;
-	margin: 0 auto;
+.navbar {
+	margin-bottom: 0;
+}
+.jumbotron {
+	background: #27A967;
+	color: white;
 	text-align: center;
-    background-color: #7f7f81;
 }
-.box{
-	/*height: 370px;*/
-	border: 2px solid #000000;
-	margin: 20px;
-    background-color: #dbdbdb;
-    /*overflow: scroll;*/
-    padding: 20px;
-} 
+.jumbotron p {
+	color: white;
+	font-size: 26px;
+}
+.navbar-inverse {
+	background: #2E2F31;
+	border: 0;
+}
+.dropdown-menu {
+	background: #2E2F31;
+	border-radius: 0;
+	border: 0;
+}
+.navbar-inverse .navbar-nav li a {
+	color: #f7f7f7;
+	font-size: 16px;
+}
+.navbar-inverse .navbar-nav li a:hover {
+	background: #27A967;
+}
+.navbar-inverse .navbar-nav .dropdown-menu li a:hover {
+	background: #2C463C;
+}
+.dropdown-menu li a {
+	padding: 10px;
+}
+.btn-primary {
+	color: #fff;
+	background-color: transparent;
+	border-color: white;
+	margin-bottom: 5px;
+}
+.btn-primary:hover {
+	color: #27A967;
+	background-color: white;
+	border-color: white;
+}
+.glyphicon-large {
+	font-size: 100px;
+}
+.call-to-action {
+	text-align: center;
+}
+.call-to-action p {
+	margin-bottom: 30px;
+	font-family: sans-serif;
+}
 
-a{
-	padding: 5px 10px;
-	margin: 15px auto;
-	border-radius: 5px;
-	border: 1px solid darkgrey;
-	display: inline-block;
-	text-decoration: none;
-	box-shadow: 1px 1px 1px #888888;
-	background-color: #c0c0c0 !important;
-}
-	a:visited, a:active, a{
-		color: #000000;
-	}
-	
-input[type='submit']{
-	padding: 5px 10px;
-	margin: 15px auto;
-	border-radius: 5px;
-	display: block;
-	box-shadow: 1px 1px 1px #888888;
-}
-label{
-	margin: 10px auto;
-	display: block;
-}
-select{
-	border: none;
-	background-color: #fff;
-}
-input[type='text'], input[type='password']{
-	margin-left: 5px;
-	padding: 5px 10px;
-	border-radius: 4px;
-	border: none;
-}
-textarea{
-	padding: 10px;
-	width: 400px;
-    height: 100px;
-}
-.error{
-	color: red;
-}
-.valid{
-	color: green;
-}
-span{
-	display: block;
-	margin: 5px;
-}
-.comment{
-	border: 1px solid green;
-	margin: 20px 20px 20px 100px;
-}
-.post{
-	border: 1px solid red;
-	margin: 20px;
-}
-.author{
-	text-align: left;
-}
-footer p{
-	text-align: center;
-}
-table{
-	width: 100%;
-}
-table, th, td {
-	border: 1px dotted grey;
-} 
-.logo {
-	display: block;
-	width:100%;
-	background-color: #7f7f81 !important;
-	border: none;
-	box-shadow: 0px 0px 0px #7f7f81;
-}
-.logo img{
-	width: 60%;
-}
