--- a/app/views/habits/ask_for_help.html
+++ b/app/views/habits/ask_for_help.html
@@ -3,61 +3,88 @@
 <head>
 	<title>Habit Breaker | Ask for help with habit page</title>
 	<meta charset ="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--   BOOTSTRAP -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--   END BOOTSTRAP -->
 	<meta name="description" content="Habit breaker will help to break your habits">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
 	<script type="text/javascript" src="/static/js/jquery.min.v3.1.0.js"></script>
 	<script type="text/javascript" src="/static/js/script.js"></script>
-	
 </head>
 <body>
-	<div id="wrapper">
-		<header>
-			<a href='/'><h1>Habit Breaker</h1></a>
-			<a href="#">About</a>
-			{% if not 'id' in session %}
-				<a href="/signin">Sign In</a>
-				<a href="/signup">Sign Up</a>
-			{%else%}
-				<a href="/users/{{session['id']}}">My page</a>
-				<a href="/users/account/{{session['id']}}">Account info</a>
-				<a href="/logout">Log Out</a>
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href='/'>Habit Breaker</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">About</a></li>
+					{% if not 'id' in session %}
+						<li><a href="/signin">Sign In</a></li>
+						<li><a href="/signup">Sign Up</a></li>
+					{%else%}
+						<li><a href="/users/{{session['id']}}">Habits</a></li>
+						<li><a href="/users/account/{{session['id']}}">Account</a></li>
+						<li><a href="/logout">Log Out</a></li>
+					{% endif %}
+		  	</ul>
+		  </div>
+		</div>
+	</nav>
+
+	<div class="container">
+		<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
+		{% with messages = get_flashed_messages(with_categories=true) %}
+			{% if messages %}
+				{% for category, message in messages %}
+
+					<span class="{{category}}">{{ message }}</span>
+
+				{% endfor %}
 			{% endif %}
-		</header>
-		<div class="box">
-			<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
-			{% with messages = get_flashed_messages(with_categories=true) %}
-				{% if messages %}
-					{% for category, message in messages %}
-						
-						<span class="{{category}}">{{ message }}</span>
-						
-					{% endfor %}
-				{% endif %}
-			{% endwith %}
-			<form action ="/habits/process_txt" method="POST"> 
-				<label for="phone_number">Your Friend Phone Number: 
-					<input type="text" name="phone_number" id="phone_number" placeholder="+18002221177">
-				</label>
+		{% endwith %}
+		<form class="form-horizontal" action ="/habits/process_txt" method="POST">
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="phone_number">Phone Number:</label>
+	  		<div class="col-sm-3">
+	    		<input class="form-control" type="text" name="phone_number" id="phone_number" placeholder="+18002221177">
+	  		</div>
+			</div>
+
+			<div class="form-group">
+	  		<label class="col-md-2 control-label"></label>
+  				<div class="col-md-8">
+			  		<input class="form-control" type="hidden" id="first_name" name="first_name" value="{{ session['first_name'] }}">
+		    		<input class="form-control" type="hidden" id="id" name="id" value="{{ session['id'] }}">
+		    		<input class="form-control" type="hidden" id="habit_id" name="habit_id" value="{{habit_id}}">
+		    		<input class="btn btn-default" type="submit" value="Send Text Message" id="submit">
+			  		<a href="/users/{{session['id']}}" class="btn btn-default">Go Back</a>
+	  			</div>
+			</div>
+		</form>
+	</div>
 				<!-- <label for="message">Message:
 					<input type="text" name="amount" id="amount" placeholder="10.00">
 				</label> -->
 				<!-- <label for="description"><span>Description: </span>
 					<textarea name="description" id="description" placeholder="Description goes here"></textarea>
 				</label> -->
-				<input type="hidden" id="first_name" name="first_name" value="{{ session['first_name'] }}">
-				<input type="hidden" id="id" name="id" value="{{ session['id'] }}">
-				<input type="hidden" id="habit_id" name="habit_id" value="{{habit_id}}">
-				<input type="submit" value="Send Text Message" id="submit">
-			</form>
-			
-			<a href="/users/{{session['id']}}">Go Back</a>
-			
-		</div>
-		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
-		</footer>
+
+
+	<div class="panel panel-default">
+	  	<div class="panel-footer">&copy; HabitBreakerTeam <a href="#">Help</a> <a href="#">Contact</a></div>
 	</div>
 </body>
 </html>
