--- a/app/views/habits/show_habit.html
+++ b/app/views/habits/show_habit.html
@@ -2,74 +2,103 @@
 <html>
 <head>
 	<title>Habit Breaker | Habit page</title>
-	<meta charset ="utf-8">
+		<meta charset ="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--   BOOTSTRAP -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--   END BOOTSTRAP -->
 	<meta name="description" content="Habit breaker will help to break your habits">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
 	<script type="text/javascript" src="/static/js/jquery.min.v3.1.0.js"></script>
 	<script type="text/javascript" src="/static/js/script.js"></script>
-	
 </head>
 <body>
-	<div id="wrapper">
-		<header>
-			<a href='/'><h1>Habit Breaker</h1></a>
-			<a href="#">About</a>
-			{% if not 'id' in session %}
-				<a href="/signin">Sign In</a>
-				<a href="/signup">Sign Up</a>
-			{%else%}
-				<a href="/users/{{session['id']}}">My page</a>
-				<a href="/users/account/{{session['id']}}">Account info</a>
-				<a href="/logout">Log Out</a>
-			{% endif %}
-		</header>
-		<div class="box">
-			<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2><h3>Violations:</h3>
-			<a href="/users/helpers/{{habit_id}}">List of my Helpers</a>
-			{% if habit_violations %}
-			
-			<h3>Habit Details - "{{habit_violations[0]['habit_name']}}", created at - "{{habit_violations[0]['habit_date'].strftime('%b %d %Y %I:%M %p')}}", total amount - ${{sum}}</h3>
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href='/'>Habit Breaker</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">About</a></li>
+					{% if not 'id' in session %}
+						<li><a href="/signin">Sign In</a></li>
+						<li><a href="/signup">Sign Up</a></li>
+					{%else%}
+						<li><a href="/users/{{session['id']}}">Habits</a></li>
+						<li><a href="/users/account/{{session['id']}}">Account</a></li>
+						<li><a href="/logout">Log Out</a></li>
+					{% endif %}
+		  	</ul>
+		  </div>
+		</div>
+	</nav>
+
+	<div class="container">
+		<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2><h3>Violations:</h3>
+		<a href="/users/helpers/{{habit_id}}">List of my Helpers</a>
+		{% if habit_violations %}
+
+		<h3>Habit Details - "{{habit_violations[0]['habit_name']}}", created at - "{{habit_violations[0]['habit_date'].strftime('%b %d %Y %I:%M %p')}}", total amount - ${{sum}}</h3>
 			<!-- <a href="/users/helpers/{{session['id']}}">List of my Helpers</a> -->
-			<br>
-				
-			<table>
-				<thead>
+		<div class="well">
+	    <table class="table">
+	    	<thead>
 					<th>Vaiolation Date</th>
 					<th>Helper Name</th>
 					<th>Amount</th>
 					<th>Action</th>
+					<th style="width: 36px;"></th>
 				</thead>
 				<tbody>
-
 					{% for data in habit_violations %}
-						<tr>
-							<td>{{data['viol_date'].strftime('%b %d %Y %I:%M %p')}}</td>
-							<td>{{data['helper_name']}}</td>
-							<td>${{data['amount']}}</td>
-							<td>
-								<!-- <a href="/habits/pay_violation/{{data['viol_id']}}">Pay</a> -->
-								<form action="/habits/pay_violation/{{data['viol_id']}}" method="POST">
-									<input type="hidden" name="email" value="{{data['helper_email']}}"><!-- helper email-->
-									<input type="hidden" name="amount" value="{{data['amount']}}"><!-- amount for violation-->
-									<input type="submit" value="Pay Now">
-								</form>
-								<!-- <a href="/destroy/{{data.habit_id}}">Remove</a> -->
-							</td>
-						</tr>
-					{% endfor %}
+					<tr>
+						<td>{{data['viol_date'].strftime('%b %d %Y %I:%M %p')}}</td>
+						<td>{{data['helper_name']}}</td>
+						<td>${{data['amount']}}</td>
+						<td>
+							<form class="form-horizontal" action="/habits/pay_violation/{{data['viol_id']}}" method="POST">
+								<div class="form-group">
+		  						<div class="col-sm-3">
+		    						<input class="form-control" type="hidden" name="email" value="{{data['helper_email']}}">
+		  						</div>
+								</div>
+								<div class="form-group">
+		  						<div class="col-sm-3">
+		    						<input class="form-control" type="hidden" name="amount" value="{{data['amount']}}">
+		  						</div>
+								</div>
+								<div class="form-group">
+		  						<label class="col-md-3 control-label"></label>
+	  								<div class="col-md-8">
+							  			<input class="btn btn-default" type="submit" value="Pay Now">
+							  			<a href="/users/{{session['id']}}" class="btn btn-default">Go Back</a>
+		  							</div>
+								</div>
+							<!-- <a href="/habits/pay_violation/{{data['viol_id']}}">Pay</a> -->
+							</form>
+							<!-- <a href="/destroy/{{data.habit_id}}">Remove</a> -->
+						</td>
+					</tr>
+						{% endfor %}
 				</tbody>
-			</table>
-					
-				
-			{% endif %}
-			<a href="/users/{{session['id']}}">Go Back</a>
-			
+	    </table>
 		</div>
-		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
-		</footer>
+	{% endif %}
+	</div>
+
+	<div class="panel panel-default">
+	  <div class="panel-footer">&copy; HabitBreakerTeam <a href="#">Help</a> <a href="#">Contact</a></div>
 	</div>
 </body>
 </html>
