--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,40 +2,62 @@
 <html>
 <head>
 	<title>Habit Breaker | Home Page</title>
-	<meta charset ="utf-8">
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--   BOOTSTRAP -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--   END BOOTSTRAP -->
 	<meta name="description" content="Habit breaker helps you to break your habits">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
 	<script type="text/javascript" src="/static/js/jquery.min.v3.1.0.js"></script>
 	<script type="text/javascript" src="/static/js/script.js"></script>
-	
+
 </head>
 <body>
-	<div id="wrapper">
-		<header>
-			<a href='/'><h1>Habit Breaker</h1></a>
-			<!-- <a class= "logo" href='/'><img src="/static/habit_logo.png"/></a> -->
-			<a href="#">About</a>
-			{% if not 'id' in session %}
-				<a href="/signin">Sign In</a>
-				<a href="/signup">Sign Up</a>
-			{%else%}
-				<a href="/users/{{session['id']}}">My page</a>
-				<a href="/users/account/{{session['id']}}">Account info</a>
-				<a href="/logout">Log Out</a>
-			{% endif %}
-		</header>
-		<div class="box">
-			<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
-			<h2>Habit Breaker</h2>
-			<p>
-				Aenean convallis tortor purus, at commodo nisl porttitor quis. Nulla eleifend hendrerit lacus at ullamcorper. Mauris a malesuada odio. Cras pretium dui eu enim laoreet, ac fermentum ante convallis. Phasellus sit amet luctus diam. Pellentesque semper, nibh quis tincidunt laoreet, felis orci tincidunt dui, sed dapibus risus nisi at sapien. Maecenas gravida sem turpis, eget pharetra magna fringilla in. Nam sed convallis sapien. In ultrices tellus eu scelerisque bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin quis gravida lorem. Pellentesque non semper metus, et ultricies eros. Proin tincidunt ullamcorper quam quis imperdiet. Vestibulum massa ante, tempor id rutrum vel, volutpat eu leo.
-			</p>
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href='/'>Habit Breaker</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">About</a></li>
+					{% if not 'id' in session %}
+						<li><a href="/signin">Sign In</a></li>
+						<li><a href="/signup">Sign Up</a></li>
+					{%else%}
+						<li><a href="/users/{{session['id']}}">Habits</a></li>
+						<li><a href="/users/account/{{session['id']}}">Account</a></li>
+						<li><a href="/logout">Log Out</a></li>
+					{% endif %}
+		  	</ul>
+		  </div>
 		</div>
-		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
-		</footer>
+	</nav>
+
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %} to Habit Breaker!</h1>
+			<p>Are you ready to break your habits? First step is admitting your habit and then we can start tracking progress. Ask your friends/family for help but remember, you will have to pay them a fee every time you are in violation. If you are caught in the act you will be notified and must pay up. Good Luck, we believe in you!</p>
+			<p><a class="btn btn-primary btn-lg" href="/signup" role="button">Start</a></p>
+			<br>
+		</div>
 	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-footer">&copy; HabitBreakerTeam <a href="#">Help</a> <a href="#">Contact</a></div>
+	</div>
+
+
 </body>
 </html>
