--- a/app/views/users/account.html
+++ b/app/views/users/account.html
@@ -3,53 +3,86 @@
 <head>
 	<title>Habit Breaker | User account info</title>
 	<meta charset ="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--   BOOTSTRAP -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--   END BOOTSTRAP -->
 	<meta name="description" content="Habit breaker will help to break your habits">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	<link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
 	<script type="text/javascript" src="/static/js/jquery.min.v3.1.0.js"></script>
 	<script type="text/javascript" src="/static/js/script.js"></script>
-	
+
 </head>
 <body>
-	<div id="wrapper">
-		<header>
-			<a href='/'><h1>Habit Breaker</h1></a>
-			
-			<a href="#">About</a>
-			{% if not 'id' in session %}
-				<a href="/signin">Sign In</a>
-				<a href="/signup">Sign Up</a>
-			{%else%}
-				<a href="/users/{{session['id']}}">My page</a>
-				<a href="/users/account/{{session['id']}}">Account info</a>
-				<a href="/logout">Log Out</a>
-			{% endif %}
-		</header>
-		<div class="box">
-			<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
-			<hr><br>
-			{% with messages = get_flashed_messages(with_categories=true) %}
-				{% if messages %}
-					{% for category, message in messages %}
-						<span class="{{category}}">{{ message }}</span>
-					{% endfor %}
-				{% endif %}
-			{% endwith %}
-			<h3>My account info:</h3>
-			<p>First Name: {{ user['first_name'] }}</p>
-			<p>Last Name: {{ user['last_name'] }}</p>
-			<p>Email: {{ user['email'] }}</p>
-			<!-- <p>Phone number: {{ user['phone_number'] }}</p> -->
-			<hr>
-			<a href="/users/edit/{{session['id']}}">Edit account info</a>
-			<a href="/users/password">Change password</a>
-			<a href="/users/delete_user/{{session['id']}}">Delete Account</a>
-			<hr>
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href='/'>Habit Breaker</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">About</a></li>
+					{% if not 'id' in session %}
+						<li><a href="/signin">Sign In</a></li>
+						<li><a href="/signup">Sign Up</a></li>
+					{%else%}
+						<li><a href="/users/{{session['id']}}">Habits</a></li>
+						<li><a href="/users/account/{{session['id']}}">Account</a></li>
+						<li><a href="/logout">Log Out</a></li>
+					{% endif %}
+		  	</ul>
+		  </div>
 		</div>
-		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
-		</footer>
+	</nav>
+	<div class="container">
+		<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
+		<hr><br>
+		{% with messages = get_flashed_messages(with_categories=true) %}
+			{% if messages %}
+				{% for category, message in messages %}
+					<span class="{{category}}">{{ message }}</span>
+				{% endfor %}
+			{% endif %}
+		{% endwith %}
+
+		<div class="container-fluid well span6">
+			<div class="span8">
+				<h3>Account Information:</h3>
+				<p>First Name: {{ user['first_name'] }}</p>
+				<p>Last Name: {{ user['last_name'] }}</p>
+				<p>Email: {{ user['email'] }}</p>
+			</div>
+
+			<div class="span2">
+				<div class="btn-group">
+	        <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#">
+	            Action
+	            <span class="icon-cog icon-white"></span><span class="caret"></span>
+	        </a>
+	        <ul class="dropdown-menu">
+	            <li><a href="/users/edit/{{session['id']}}"><span class="icon-wrench"></span>Edit</a></li>
+	            <li><a href="/users/delete_user/{{session['id']}}"><span class="icon-trash"></span>Delete</a></li>
+	            <li><a href="/users/password"><span class="icon-wrench"></span>Change Password</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	 	</div>
+				<!-- <p>Phone number: {{ user['phone_number'] }}</p> -->
 	</div>
+
+	<div class="panel panel-default">
+	  	<div class="panel-footer">&copy; HabitBreakerTeam <a href="#">Help</a> <a href="#">Contact</a></div>
+	</div>
+
 </body>
 </html>
